--- a/src/app/index.css
+++ b/src/app/index.css
@@ -57,6 +57,7 @@ a {
   }
 }
 
+
 .header-inner {
   display: flex;
   margin: 0 auto;
@@ -68,33 +69,49 @@ a {
   justify-content: space-between;
 }
 
-.order-submit {
+.text-input {
+  background-color: white;
+  box-shadow: rgba(67, 90, 111, 0.204) 0px 0px 0px 1px inset, rgba(67, 90, 111, 0.145) 0px 1px 2px inset;
+  -webkit-rtl-ordering: logical;
+  cursor: text;
+  padding: 0 10px;
+  height: 32px;
+  color: rgb(67, 90, 111);
+  font-size: 16px;
+  line-height: 16px;
+  border-radius: 4px;
+  text-rendering: auto;
+  color: initial;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: start;
+  margin: 0em;
+  border: none;
+  width: 228px;
   -webkit-appearance: none;
-  background-color: #ff569e85;
-  color: rgb(255, 255, 255);
-  cursor: pointer;
-  font-size: 12px;
-  font-weight: bold;
-  letter-spacing: 0.7px;
-  text-align: center;
-  text-transform: uppercase;
-  width: 35%;
-  border-radius: 20px;
-  border-width: initial;
-  border-style: none;
-  border-color: initial;
-  border-image: initial;
-  padding: 14px 20px;
-  transition: background-color 0.25s ease-in-out 0s;
 }
 
-.order-submit[disabled] {
-  background-color: rgb(236, 237, 239);
-  cursor: not-allowed;
+.icon-input-container {
+  display: inline-flex;
+  margin-top: 5px;
 }
 
-.onboarding-svg {
-  height: 41vh;
+.input-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  height: 32px;
+  width: 32px;
+}
+
+.icon-input {
+  padding: 0 10px 0 32px;
+  width: 100%;
 }
 
 .onboarding-parent {
@@ -105,6 +122,172 @@ a {
   background: linear-gradient(0, #654ea342, #eaafc885);
 }
 
+.order-parent {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  flex-direction: column;
+}
+.order-header {
+  max-width: 1024px;
+  box-sizing: content-box;
+  margin: 0px auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 42px;
+  padding-bottom: 36px;
+  min-width: 95%;
+}
+
+.order-body {
+  padding-left: 10px;
+  padding-right: 10px;
+  max-width: 1024px;
+  box-sizing: content-box;
+  margin: 0px auto;
+  padding-top: 16px;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+
+.order-drink-title {
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+  width: 100%;
+}
+
+.items-content {
+  padding-top: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.item-card-container {
+  display: flex;
+  cursor: pointer;
+  box-sizing: content-box;
+  padding: 16px 0px;
+  border-top: 1px solid rgba(217, 219, 224, 0.5);
+  width: 100%;
+}
+
+.item-desc {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  font-family: PostmatesStd, "Helvetica Neue", Helvetica;
+  font-size: 14px;
+  letter-spacing: 0.14px;
+  font-weight: 400;
+  line-height: 1.43;
+  color: rgba(143, 149, 163, 0.9);
+  margin-bottom: 5px;
+  overflow: hidden;
+}
+
+.item-title {
+  font-size: 16px;
+  letter-spacing: -0.28px;
+  font-weight: 500;
+  line-height: normal;
+  display: block;
+  color: rgb(45, 49, 56);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0px 0px 5px;
+}
+
+.item-image-container {
+  position: relative;
+  width: 128px;
+  height: 128px;
+  display: flex;
+  -webkit-box-pack: end;
+  justify-content: center;
+  align-items: center;
+}
+
+.item-words {
+  display: flex;
+  flex-direction: column;
+  min-width: 0px;
+  flex: 1 1 0%;
+  padding: 9px 0px;
+}
+
+@media (max-width: 1061px) {
+  .location {
+    width: 97% !important;
+  }
+}
+
+@media (max-width: 600px) {
+  .location {
+    width: 94% !important;
+  }
+}
+
+@media (max-width: 400px) {
+  .location {
+    width: 90% !important;
+  }
+}
+@media screen and (min-width: 1061px) {
+
+  .location {
+    width: 1044px !important;
+  }
+
+  .item-words {
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    padding: 20px 20px 15px;
+  }
+
+  .item-card-container {
+    width: 500px;
+    height: 128px;
+    margin: 16px 0px;
+    padding: 0px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(217, 219, 224, 0.5);
+    border-image: initial;
+  }
+  .order-drink-title {
+    border-bottom: 1px solid rgba(217, 219, 224, 0.5);
+    padding-bottom: 16px;
+  }
+  .order-header {
+    min-width: 1000px;
+    padding-left: 36px;
+    padding-right: 36px;
+  }
+}
+
+@media (max-width: 600px) {
+  .order-header {
+    padding-left: 16px;
+    padding-right: 16px;
+    box-sizing: content-box;
+    margin: 0px auto;
+    min-width: 85%;
+  }
+  .order-body {
+    padding-left: 16px;
+    padding-right: 16px;
+    box-sizing: content-box;
+    margin: 0px auto;
+    min-width: 85%;
+  }
+}
 .onboarding-step-parent {
   display: flex;
   flex-direction: column;
@@ -127,11 +310,80 @@ a {
   flex-direction: column;
   max-width: 375px;
 }
+.fab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 3.9375rem;
+  height: 3.9375rem;
+  border-radius: 50%;
+  background-color: white;
+  bottom: 1.3125rem;
+  right: 1.3vh;
+  z-index: 9999;
+  cursor: pointer;
+  box-shadow: rgba(0, 0, 0, 0.224) 1px 1px 4px;
+  top: auto;
+  left: auto;
+  transition: .4s;
+  position: fixed;
+}
+
+.dropdown {
+  position: absolute;
+  top: 60px;
+  width: 120px;
+  right: 1px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.224) 1px 1px 4px;
+  border-radius: 4px;
+}
+
+.dropdown-content {
+  cursor: pointer;
+  color: #797979;
+  height: 30px;
+  border-bottom: 1px solid #e2e2e2;
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
+}
 
 .onboarding-fade-in {
   display: flex;
   flex-direction: column;
   width: 100%;
+}
+
+.btn-hollow {
+  background: linear-gradient(-45deg, #00F260, #0575E6);
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  border-radius: 6px;
+  background-size: 400% 400%;
+  color: #FFF;
+  text-transform: uppercase;
+  border: 0;
+  padding: 10px 27px;
+  font-size: 15px;
+  margin: 10px 0px;
+  cursor: pointer;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #1c1c1c;
+  border-radius: 50%;
+  opacity: .2;
+  display: inline-block;
+  margin: 10px 8px;
+}
+
+.dot-filled {
+  opacity: 1;
 }
 
 .onboarding-progress {
@@ -141,27 +393,41 @@ a {
   margin-bottom: 15px;
 }
 
-.no-pad {
-  padding: 0
+.round-button {
+  background-color: #ffa9ce;
+  border-radius: 100px;
+  padding: 10px 50px;
+  color: white;
+  text-decoration: none;
+  font-size: 1.45em;
+  margin: 0 10px;
+  border: 0;
+  margin-top: 10px;
+  cursor: pointer;
+  text-align: center;
 }
 
-.landing-parent {
+.flex-center {
   display: flex;
-  flex-flow: row nowrap;
-  width: 100%;
   justify-content: center;
-  margin: 20px;
+  align-items: center;
 }
 
-.landing-content {
-  flex: 1;
+.onboarding-svg {
+  height: 41vh;
 }
 
-.landing-svg {
-  flex: 2;
+.modal-container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1100;
+  transform: translateY(0%);
+  transition: transform 200ms cubic-bezier(0.165, 0.84, 0.44, 1) 0s;
 }
-
-
 
 @media (max-height: 400px) {
   h1 {
@@ -186,96 +452,6 @@ a {
   .zero {
     margin-top: 5vh;
   }
-}
-
-.round-button {
-  background-color: #ffa9ce;
-  border-radius: 100px;
-  padding: 10px 50px;
-  color: white;
-  text-decoration: none;
-  font-size: 1.45em;
-  margin: 0 10px;
-  border: 0;
-  margin-top: 10px;
-  cursor: pointer;
-  text-align: center;
-}
-
-.dot {
-  height: 10px;
-  width: 10px;
-  background-color: #1c1c1c;
-  border-radius: 50%;
-  opacity: .2;
-  display: inline-block;
-  margin: 10px 8px;
-}
-
-.dot-filled {
-  opacity: 1;
-}
-
-.icon-input-container {
-  display: inline-flex;
-  margin-top: 5px;
-}
-
-.input-icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  height: 32px;
-  width: 32px;
-}
-
-.icon-input {
-  padding: 0 10px 0 32px;
-  width: 100%;
-}
-
-.text-input {
-  background-color: white;
-  box-shadow: rgba(67, 90, 111, 0.204) 0px 0px 0px 1px inset, rgba(67, 90, 111, 0.145) 0px 1px 2px inset;
-  -webkit-rtl-ordering: logical;
-  cursor: text;
-  height: 32px;
-  color: rgb(67, 90, 111);
-  font-size: 16px;
-  line-height: 16px;
-  border-radius: 4px;
-  text-rendering: auto;
-  color: initial;
-  letter-spacing: normal;
-  word-spacing: normal;
-  text-transform: none;
-  text-indent: 0px;
-  text-shadow: none;
-  display: inline-block;
-  text-align: start;
-  margin: 0em;
-  border: none;
-  -webkit-appearance: none;
-}
-
-.fab {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 3.9375rem;
-  height: 3.9375rem;
-  border-radius: 50%;
-  background-color: white;
-  bottom: 1.3125rem;
-  right: 1.3vh;
-  z-index: 9999;
-  cursor: pointer;
-  box-shadow: rgba(0, 0, 0, 0.224) 1px 1px 4px;
-  top: auto;
-  left: auto;
-  transition: .4s;
-  position: fixed;
 }
 
 @media (min-width: 600px) {
@@ -325,22 +501,138 @@ a {
   }
 }
 
-.dropdown {
-  position: absolute;
-  top: 60px;
-  width: 120px;
-  right: 1px;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.224) 1px 1px 4px;
-  border-radius: 4px;
+.checkout-section-parent {
+  width: 800px;
 }
 
-.dropdown-content {
-  cursor: pointer;
-  color: #797979;
-  height: 30px;
-  border-bottom: 1px solid #e2e2e2;
+.checkout {
+  width: 800px;
+  min-width: 0px;
+}
+
+.checkout-box {
+  font-size: 14px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 16px;
+  padding-left: 16px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(236, 237, 239);
+  border-image: initial;
   display: flex;
-  align-items: center;
-  padding-left: 5px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.order-submit {
+  -webkit-appearance: none;
+  background-color: #ff569e85;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: bold;
+  letter-spacing: 0.7px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 35%;
+  border-radius: 20px;
+  border-width: initial;
+  border-style: none;
+  border-color: initial;
+  border-image: initial;
+  padding: 14px 20px;
+  transition: background-color 0.25s ease-in-out 0s;
+}
+
+.order-submit[disabled] {
+  background-color: rgb(236, 237, 239);
+  cursor: not-allowed;
+}
+.no-pad {
+  padding: 0
+}
+.button-container {
+  margin-top: 15px;
+  width: 800px;
+  display: flex;
+  flex-direction: row-reverse;
+  min-height: 43px;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 1061px) {
+  .checkout-section-parent {
+    width: 97% !important;
+  }
+  .checkout {
+    width: 97% !important;
+  }
+  .button-container {
+    width: 97% !important;
+  }
+}
+
+@media (max-width: 600px) {
+  .checkout-section-parent {
+    width: 94% !important;
+  }
+  .checkout {
+    width: 94% !important;
+    padding-top: 12px;
+  }
+  .button-container {
+    width: 94% !important;
+  }
+  .order-submit {
+    width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .checkout-section-parent {
+    width: 90% !important;
+  }
+  .checkout {
+    width: 90% !important;
+    padding-top: 12px;
+  }
+  .button-container {
+    width: 90% !important;
+  }
+  .order-submit {
+    width: 100%;
+  }
+}
+
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
+}
+
+.spin {
+  animation-name: spin;
+  animation-duration: 3000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear; 
+}
+
+.landing-parent {
+  display: flex;
+  flex-flow: row nowrap;
+  width: 100%;
+  justify-content: center;
+  margin: 20px;
+}
+
+.landing-content {
+  flex: 1;
+}
+
+.landing-svg {
+  flex: 2;
 }
