--- a/src/app/index.css
+++ b/src/app/index.css
@@ -129,14 +129,10 @@ a {
   flex-direction: column;
 }
 .order-header {
-  max-width: 1024px;
-  box-sizing: content-box;
-  margin: 0px auto;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 42px;
-  padding-bottom: 36px;
-  min-width: 95%;
+    background: rgba(black, 0.5);
+    background: url(https://images.unsplash.com/photo-1536252470153-1fa6046d8723?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80);
+    color: white;
+    background-size: 100% auto;
 }
 
 .order-body {
@@ -266,7 +262,6 @@ a {
     padding-bottom: 16px;
   }
   .order-header {
-    min-width: 1000px;
     padding-left: 36px;
     padding-right: 36px;
   }
