--- a/src/app/index.css
+++ b/src/app/index.css
@@ -133,6 +133,7 @@ a {
     background: url(https://images.unsplash.com/photo-1536252470153-1fa6046d8723?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80);
     color: white;
     background-size: 100% auto;
+    padding: 25px;
 }
 
 .order-body {
