--- a/src/app/index.css
+++ b/src/app/index.css
@@ -129,11 +129,11 @@ a {
   flex-direction: column;
 }
 .order-header {
-    background: rgba(black, 0.5);
-    background: url(https://images.unsplash.com/photo-1536252470153-1fa6046d8723?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80);
+    background: rgba(0,0,0,0.5) url(https://images.unsplash.com/photo-1536252470153-1fa6046d8723?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80);
     color: white;
+    width: 100%;
     background-size: 100% auto;
-    padding: 25px;
+    padding: 20px 0;
 }
 
 .order-body {
@@ -262,16 +262,10 @@ a {
     border-bottom: 1px solid rgba(217, 219, 224, 0.5);
     padding-bottom: 16px;
   }
-  .order-header {
-    padding-left: 36px;
-    padding-right: 36px;
-  }
 }
 
 @media (max-width: 600px) {
   .order-header {
-    padding-left: 16px;
-    padding-right: 16px;
     box-sizing: content-box;
     margin: 0px auto;
     min-width: 85%;
