--- a/src/app/index.css
+++ b/src/app/index.css
@@ -620,9 +620,16 @@ a {
 }
 
 .landing-content {
-  flex: 1;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  flex: 2;
+  margin-left: 40px;
 }
 
 .landing-svg {
-  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 3;
 }
