--- a/src/app/index.css
+++ b/src/app/index.css
@@ -633,3 +633,29 @@ a {
   align-items: center;
   flex: 3;
 }
+
+@media (max-width: 600px) {
+  .landing-parent {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  h1 {
+    width: 100px;
+  }
+  p {
+    width: 40%;
+  }
+  .landing-svg {
+    width: 40%;
+    height: 40%;
+    flex: 1;
+    padding-top: 10px;
+  }
+  .landing-content, h1 {
+    font-size: 10px;
+    width: 70%;
+    margin: 0px !important;
+  }
+}
+
+
