--- a/src/app/index.css
+++ b/src/app/index.css
@@ -8,7 +8,10 @@ a {
 }
 
 .header-title {
-  font-size: 24px
+  font-size: 25px;
+  cursor: pointer;
+  user-select: none;
+  color: black;
 }
 
 .header-container-one {
@@ -613,7 +616,7 @@ a {
 
 .landing-parent {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   width: 100%;
   justify-content: center;
   margin: 20px;
