--- a/src/app/index.css
+++ b/src/app/index.css
@@ -60,6 +60,34 @@ a {
   }
 }
 
+.landing-p {
+  font-size: 25px;
+  margin-top: 0px;
+  margin-bottom: 30px;
+}
+
+.landing-h1 {
+  font-size: 4em;
+}
+
+.landing-btn {
+  width: 170px;
+}
+
+@media (max-width: 600px) {
+  .landing-parent {
+    margin: 10px;
+  }
+  .landing-h1 {
+    font-size: 30px;
+  }
+  .landing-p {
+    font-size: 15px;
+  }
+  .landing-btn {
+    width: 120px
+  }
+}
 
 .header-inner {
   display: flex;
