--- a/src/app/index.css
+++ b/src/app/index.css
@@ -201,7 +201,8 @@ a {
   cursor: pointer;
   box-sizing: content-box;
   padding: 16px 0px;
-  border-top: 1px solid rgba(217, 219, 224, 0.5);
+  border-radius: 3px;
+  border-top: 1px solid rgb(204, 204, 204);
   width: 100%;
 }
 
@@ -286,11 +287,11 @@ a {
     padding: 0px;
     border-width: 1px;
     border-style: solid;
-    border-color: rgba(217, 219, 224, 0.5);
+    border-color: rgb(204, 204, 204);
     border-image: initial;
   }
   .order-drink-title {
-    border-bottom: 1px solid rgba(217, 219, 224, 0.5);
+    border-bottom: 1px solid rgb(204, 204, 204);
     padding-bottom: 16px;
   }
 }
