--- a/src/app/index.css
+++ b/src/app/index.css
@@ -655,8 +655,9 @@ a {
   display: flex;
   flex-flow: column nowrap;
   flex: 2;
-  padding-top: 25px;
+  justify-content: center;
   margin-left: 40px;
+  padding-bottom: 100px;
 }
 
 .landing-svg {
@@ -664,4 +665,28 @@ a {
   justify-content: center;
   align-items: center;
   flex: 3;
+}
+
+.lsv {
+  margin-bottom: 30px;
+}
+@media (max-height: 400px) {
+  .lsv {
+    height: 30vh;
+    margin-top: 20px;
+    max-height: 300px;
+  }
+  .landing-content {
+    padding-bottom: 0;
+  }
+}
+
+@media (max-width: 600px) {
+  .lsv {
+    max-width: 90vw;
+    max-height: 300px;
+  }
+  .landing-content {
+    padding-bottom: 0;
+  }
 }
