--- a/src/app/index.css
+++ b/src/app/index.css
@@ -540,8 +540,9 @@ a {
   padding-left: 16px;
   border-width: 1px;
   border-style: solid;
-  border-color: rgb(236, 237, 239);
+  border-color: rgb(204, 204, 204);
   border-image: initial;
+  border-radius: 3px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
