--- a/src/app/index.css
+++ b/src/app/index.css
@@ -18,7 +18,7 @@ a {
   display: flex;
   align-items: center;
   width: 90px;
-  justify-content: space-around
+  justify-content: space-around;
 }
 
 .cart-notif {
@@ -46,12 +46,12 @@ a {
   z-index: 400;
   background-color: rgb(255, 255, 255);
   transition: background-color 0.2s ease-in-out 0s;
-  box-shadow: 0 4px 12px rgba(0,0,0,.08), 0 0 1px rgba(1,0,0,.1);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08), 0 0 1px rgba(1, 0, 0, 0.1);
 }
 
 @media (max-width: 500px) {
   .header-title {
-    font-size: 18px
+    font-size: 18px;
   }
 
   .header {
@@ -85,7 +85,7 @@ a {
     font-size: 15px;
   }
   .landing-btn {
-    width: 120px
+    width: 120px;
   }
 }
 
@@ -102,7 +102,8 @@ a {
 
 .text-input {
   background-color: white;
-  box-shadow: rgba(67, 90, 111, 0.204) 0px 0px 0px 1px inset, rgba(67, 90, 111, 0.145) 0px 1px 2px inset;
+  box-shadow: rgba(67, 90, 111, 0.204) 0px 0px 0px 1px inset,
+    rgba(67, 90, 111, 0.145) 0px 1px 2px inset;
   -webkit-rtl-ordering: logical;
   cursor: text;
   padding: 0 10px;
@@ -160,11 +161,11 @@ a {
   flex-direction: column;
 }
 .order-header {
-    background: url(https://s3-us-west-2.amazonaws.com/remylacroix/header-img.jpeg);
-    color: white;
-    width: 100%;
-    background-size: 100% auto;
-    padding: 20px 0;
+  background: url(https://fullstacklacroix.netlify.app/static/banner.jpg);
+  color: white;
+  width: 100%;
+  background-size: 100% auto;
+  padding: 20px 0;
 }
 
 .order-body {
@@ -269,7 +270,6 @@ a {
   }
 }
 @media screen and (min-width: 1061px) {
-
   .location {
     width: 1044px !important;
   }
@@ -347,7 +347,7 @@ a {
   box-shadow: rgba(0, 0, 0, 0.224) 1px 1px 4px;
   top: auto;
   left: auto;
-  transition: .4s;
+  transition: 0.4s;
   position: fixed;
 }
 
@@ -378,14 +378,14 @@ a {
 }
 
 .btn-hollow {
-  background: linear-gradient(-45deg, #00F260, #0575E6);
+  background: linear-gradient(-45deg, #00f260, #0575e6);
   font-weight: 400;
   letter-spacing: 0.5px;
   transition: all 0.3s ease;
   cursor: pointer;
   border-radius: 6px;
   background-size: 400% 400%;
-  color: #FFF;
+  color: #fff;
   text-transform: uppercase;
   border: 0;
   padding: 10px 27px;
@@ -399,7 +399,7 @@ a {
   width: 10px;
   background-color: #1c1c1c;
   border-radius: 50%;
-  opacity: .2;
+  opacity: 0.2;
   display: inline-block;
   margin: 10px 8px;
 }
@@ -453,7 +453,7 @@ a {
 
 @media (max-height: 400px) {
   h1 {
-    font-size: 18px
+    font-size: 18px;
   }
   p {
     font-size: 12px;
@@ -466,7 +466,7 @@ a {
 
 @media (max-width: 600px) {
   h1 {
-    font-size: 24px
+    font-size: 24px;
   }
   .onboarding-svg {
     max-width: 90vw;
@@ -519,7 +519,7 @@ a {
   }
 
   .onboarding-progress {
-    padding-top: 30px
+    padding-top: 30px;
   }
 }
 
@@ -573,7 +573,7 @@ a {
   cursor: not-allowed;
 }
 .no-pad {
-  padding: 0
+  padding: 0;
 }
 .button-container {
   margin-top: 15px;
@@ -630,10 +630,10 @@ a {
 
 @keyframes spin {
   from {
-      transform:rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
-      transform:rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
@@ -641,7 +641,7 @@ a {
   animation-name: spin;
   animation-duration: 3000ms;
   animation-iteration-count: infinite;
-  animation-timing-function: linear; 
+  animation-timing-function: linear;
 }
 
 .landing-parent {
